--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -48,14 +49,30 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
+//    implementation 'com.google.firebase:firebase-auth:21.1.0' - replaced
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // PERMISSION -> CAMERA
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'// New Addition
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'// New Addition to use SplashActivity Click "Sync Now"
+    implementation 'com.karumi:dexter:6.2.2'
+
 
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+
+    //Firebase Authentication
+
+    implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    // Add the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
+
 
     //Room Database
     def room_version = "2.4.3"
