--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
 
 
+    //Firebase Database
+    implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
 
     //Room Database
     def room_version = "2.4.3"
