--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
 
         <activity
             android:name=".HomeActivity"
-            android:exported="false" />
+            android:exported="true" />
+
         <activity
             android:name=".Login.SplashActivity"
             android:exported="true">
@@ -49,6 +50,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+
     </application>
 
 </manifest>
